--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .input-field {
+        @apply outline-none shadow-lg px-4 py-2 w-full border border-gray-400 rounded-md mt-2 ring-yellow-500 focus:ring focus:border-transparent;
+    }
+}
